--- a/index.html
+++ b/index.html
@@ -469,9 +469,40 @@
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-icon" width="8" height="8">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </button>
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <input
+            class="modal-input"
+            type="text"
+            name="user-name"
+            id="user-name"
+          />
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-person"></use>
+          </svg>
+          <input
+            class="modal-input"
+            type="text"
+            name="user-email"
+            id="user-name"
+          />
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-person"></use>
+          </svg>
+          <input
+            class="modal-input"
+            type="text"
+            name="user-tel"
+            id="user-name"
+          />
+          <svg class="modal-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-person"></use>
+          </svg>
+        </form>
+      </div>
     </div>
   </body>
 </html>
