--- a/index.html
+++ b/index.html
@@ -462,45 +462,107 @@
             </li>
           </ul>
         </div>
+        <div class="container form-field">
+          <p class="form-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="label-footer-form">
+              <input
+                class="input-footer"
+                name="input-footer"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
-        <button type="button" class="modal-close-btn">
-          <svg class="modal-icon" width="8" height="8">
+        <button type="button" class="btn-close">
+          <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <input
-            class="modal-input"
-            type="text"
-            name="user-name"
-            id="user-name"
-          />
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
-          <input
-            class="modal-input"
-            type="text"
-            name="user-email"
-            id="user-name"
-          />
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
-          <input
-            class="modal-input"
-            type="text"
-            name="user-tel"
-            id="user-name"
-          />
-          <svg class="modal-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
+          <div class="inputs">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-inputs">
+            <label class="modal-label" for="user-tel">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-tel"
+                id="user-tel"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-inputs">
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-inputs input-checkbox">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="textarea-comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-checkbox">
+            <input
+              class="checkbox-privacy visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="privacy-text" for="user-privacy">
+              <span class="privacy-span">
+                <svg class="modal-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checked"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
