--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
               <input
-                class="modal-input"
+                class="inputs"
                 type="text"
                 name="user-name"
                 id="user-name"
@@ -507,7 +507,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-inputs">
+          <div class="inputs">
             <label class="modal-label" for="user-tel">Phone</label>
             <div class="modal-input-wrap">
               <input
@@ -521,7 +521,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-inputs">
+          <div class="inputs">
             <label class="modal-label" for="user-email">Email</label>
             <div class="modal-input-wrap">
               <input
@@ -535,7 +535,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-inputs input-checkbox">
+          <div class="inputs input-checkbox">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="textarea-comment"
