--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
               <input
-                class="inputs"
+                class="modal-input"
                 type="text"
                 name="user-name"
                 id="user-name"
